--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,7 @@ h1 {
 
 section.content {
     display: flex;
-    flex-direction: column;
-    gap: 10px; /* Khoảng cách giữa các phần tử */
+    justify-content: center;
     padding: 15px;
 }
 
@@ -38,6 +37,13 @@ section.content {
     color: white;
     padding: 25px; /* Tăng padding để làm phần tử lớn hơn */
     border-radius: 5px;
+    width: 100%; /* Đảm bảo box chiếm toàn bộ chiều rộng */
+    display: flex;
+    flex-direction: column;
+    gap: 10px; /* Khoảng cách giữa các phần tử trong box */
+}
+
+.item {
     text-align: center;
 }
 
@@ -60,12 +66,11 @@ footer {
     }
 
     section.content {
-        flex-direction: column;
         justify-content: center;
     }
 
     .box {
-        width: 100%; /* Đảm bảo các box vẫn xếp chồng lên nhau */
-        margin-bottom: 15px; /* Thêm khoảng cách giữa các box */
+        width: 70%; /* Giảm kích thước của box khi màn hình lớn hơn 768px */
+        margin: 0 auto; /* Canh giữa box */
     }
 }
